--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 
                                     </h2>
 
-                                    <div class="title__description">Scroll down or click the button to access magazine</div>
-
+                                    <div class="title__description">Scroll down to view the flipbook</div>
+                                    <div class="title__description">Click the button to download the magazine</div>
 
                                     <!-- Options btn color: .btn-success | .btn-info | .btn-warning | .btn-danger | .btn-primary -->
 
