--- a/index.html
+++ b/index.html
@@ -72,11 +72,10 @@
                                     </h2>
 
                                     <div class="title__description">Scroll down to view the flipbook</div>
-                                    <div class="title__description">Click the button to download the magazine</div>
 
                                     <!-- Options btn color: .btn-success | .btn-info | .btn-warning | .btn-danger | .btn-primary -->
 
-                                    <div class="title__action"><a href="#book" class="btn btn-success">Click Me!</a></div>
+                                    <div class="title__action"><a href="#book" class="btn btn-success">Download instead</a></div>
 
                                 </div>
 
