--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
                     <div class="hero-section__option">
 
-                        <img src="image.png" alt="Hero section image">
+                        <img src="Image.png" alt="Hero section image">
 
                     </div>
 
