--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                                             <span class="title__effect is-visible">Authors</span>
                                             <span class="title__effect">Artists</span>
                                             <span class="title__effect">Creative</span>
-                                            <span class="title__effect"><center>GPS</center></span>
+                                            <span class="title__effect"><center>GPSites</center></span>
                                         </strong>
                                     </h2>
                                     <!-- Options btn color: .btn-success | .btn-info | .btn-warning | .btn-danger | .btn-primary -->
