--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                                     <h2 class="title__heading">
                                         <span>We are</span>
                                         <strong class="hero-section__words">
-                                            <span class="title__effect is-visible">Authors</span>
+                                            <span class="title__effect is-visible">Shane Sarosh</span>
                                             <span class="title__effect">Artists</span>
                                             <span class="title__effect">Creative</span>
                                             <span class="title__effect"><center>GPSites</center></span>
